--- a/aula01.css
+++ b/aula01.css
@@ -26,3 +26,20 @@ body {
     background-color: rgb(123, 225, 105);
     border-radius: 10px;
 }
+
+img{
+    width: 300px;
+    height: 300px;
+    border: 1px solid rgb(1, 1, 1);
+}
+
+input{
+    width: 90%;
+    padding: 10px;
+}
+
+.label{
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+}
